--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <h1>Andranik Melikbekyan</h1>
             <h2>Frontend Developer</h2>
             <p>
-              Hi, I'm Andranik Melikbekyan, a Web Developer. I am looking for a
-              company for internship and would appreciate your support.
-              Currently learning React js & Pythone, thanks in advance for any
-              links, tips or opportunities you can offer.
+              
+              Hello, I am Andranik Melikbekyan, a beginner Front-End Developer. I studied at the National Polytechnic University of Armenia (Yerevan Polytechnic) in the Department of Robotics and Mechatronics on a full scholarship. However, I left during my third year to focus on self-education.
+
+I am currently seeking a company for an internship and would greatly appreciate your support. I am actively learning React.js and Python. Thank you in advance for any links, tips, or opportunities you can share. 
             </p>
           </div>
         </div>
